Fixed logo overflow
Before:
https://cloud.githubusercontent.com/assets/8310677/16219354/11c4ebe8-3786-11e6-8623-6a3a0090debb.png

After:
https://cloud.githubusercontent.com/assets/8310677/16219353/11a0a1e8-3786-11e6-8e6b-c897e379fa64.png

--- a/css/masthead.css
+++ b/css/masthead.css
@@ -131,7 +131,7 @@ a:hover img.logo {
 .brand {
   position: relative;
   padding-left: 360px;
-  min-height: 310px;
+  min-height: 319px; /* ~299px logo height + 20px top */
 }
 
 .brand h1 {
@@ -151,7 +151,7 @@ a:hover img.logo {
 .brand .logo {
   display: block;
   position: absolute;
-  left: -20px;
+  left: 0;
   top: 20px;
   width: 340px;
 }
